==06/14/2009==
Trevius: Added new command #randomfeatures which will randomize all possible features for playable races.
Derision: Code support for Steadfast Servant Veteran AA.
Derision: Added entity_list::GetRandomClient accessible from Perl.
Dersiion: Fixed infinite loop in EntityList::RadialSetLogging.
Derision: AATimers are now sent at level 1 rather than level >= 51.

==06/13/2009==
Derision: Implemented SE_PercentXPIncrease and Resist caps.
Trevius: Removing an Illusion should now restore all features to their original settings in most cases.
Trevius: SoF - Adjusted Power Source code some to remove a bug with using the slot.
Derision: Implemented SE_SummonAndResAllCorpses
KLS: Rebalanced some spell effects aggro values.
KLS: Hate added should now be treated correctly.
KLS: Archery should now cause aggro.
KLS: Added rule Aggro:PetAggroAmount to control how much hate a pet causes, 50% default.
KLS: Bash will now cause extra hate depending on the AC of the shield you're using if any.
KLS: Implemented resist reduction and hate reduction spell focus.
KLS: quest::updatespawntimer will now set the respawn timer in the database.
KLS: Stole Trevius' idea to let augments work as focus items.

==06/12/2009==
Trevius: The #nukeitem command and related quest commands is now able to remove items on the cursor and within bag slots of the cursor.
Trevius: SoF - The Power Source Slot is now a usable slot.  Items set to use slot 22 in the items table will be able to use this new slot.
KLS: On successful completion of an adventure players should be removed from the adventure immediately instead of after 30 minutes.

==06/11/2009==
AndMetal: Rule values can be viewed and modified through the web interface. They're updated into the database only, so they won't go into effect until you restart the server.

==06/10/2009==
realityincarnate: Added /makeleader command functionality
realityincarnate: Non-leaders can no longer kick members from the group